# GameOver

./: CMakeLists.txt  CMakePresets.json  GitHelp  conanfile.txt
conan/: linux_profile_relwithdebinfo
src/: CMakeLists.txt  main.cpp
systemd/: install.sh.in
